[package]
name = "neo-ledger-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "Pure ledger and wire data types for Neo blockchain (Witness, Block, Transaction, etc.)"

[dependencies]
neo-crypto = { workspace = true }
neo-error = { workspace = true }
neo-primitives = { workspace = true }
neo-io = { workspace = true }
neo-vm-rs = { workspace = true }
neo-redeem-script = { workspace = true }
neo-config = { workspace = true }

base64 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
